--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
 
+
+:root {
+    --primary-color: #64C9CF;
+}
+
 body {
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+ hr{
+     margin: 1rem 0rem;
+ }
+
+ /**Container**/
+ .container{
+     padding: 0rem 1rem;
+ }
+
+ .container-center {
+     max-width: 600px;
+     margin:auto;
+ }
+
+ /**Links**/
+
+ .link {
+     text-decoration: none;
+     padding: 0.5rem 1rem;
+ }
+
+ .primary-link{
+     background-color: var(--primary-color);
+     border-radius: 0.5rem;
+     color: white;
+
+ }
