--- a/styles.css
+++ b/styles.css
@@ -34,5 +34,10 @@ body {
      background-color: var(--primary-color);
      border-radius: 0.5rem;
      color: white;
+ }
 
+ .secondary-link{
+     color: var(--primary-color);
+     border-radius: 0.5rem;
+     border: 1px solid var(--primary-color);
  }
