--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,16 @@ body {
      border-radius: 0.5rem;
      border: 1px solid var(--primary-color);
  }
+  
+ /***List***/
+
+ .list-non-bullet {
+     list-style: none;
+ }
+
+ .list-item-inline{
+     display: inline;
+     padding: 0rem 0.5rem;
+ }
+
+ 
