--- a/styles.css
+++ b/styles.css
@@ -53,4 +53,23 @@ body {
      padding: 0rem 0.5rem;
  }
 
- 
+ /**Navigation**/
+
+ .navigation{
+     background-color: var(--primary-color);
+     color: white;
+     padding: 1rem;
+     border-bottom-left-radius: 1rem;
+ }
+
+ .navigation .nav-brand {
+     font-weight: bold;
+ }
+
+ .navigation .link {
+     color: white;
+ }
+
+ .nav-pills {
+     text-align: right;
+ }
