--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 :root {
     --primary-color: #64C9CF;
     --dary-grey: #716F81;
+    --off-white: #F9F9F9;
 
 }
 
@@ -11,89 +12,103 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
- hr{
-     margin: 1rem 0rem;
- }
+hr {
+    margin: 1rem 0rem;
+}
 
- /**Container**/
- .container{
-     padding: 0rem 1rem;
- }
+/**Container**/
+.container {
+    padding: 0rem 1rem;
+}
 
- .container-center {
-     max-width: 600px;
-     margin:auto;
- }
+.container-center {
+    max-width: 600px;
+    margin: auto;
+}
 
- /**Links**/
+/**Links**/
 
- .link {
-     text-decoration: none;
-     padding: 0.5rem 1rem;
- }
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
 
- .primary-link{
-     background-color: var(--primary-color);
-     border-radius: 0.5rem;
-     color: white;
- }
+.primary-link {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
 
- .secondary-link{
-     color: var(--primary-color);
-     border-radius: 0.5rem;
-     border: 1px solid var(--primary-color);
- }
-  
- /***List***/
+.secondary-link {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
+}
 
- .list-non-bullet {
-     list-style: none;
- }
+/***List***/
 
- .list-item-inline{
-     display: inline;
-     padding: 0rem 0.5rem;
- }
+.list-non-bullet {
+    list-style: none;
+}
 
- /**Navigation**/
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
 
- .navigation{
-     background-color: var(--primary-color);
-     color: white;
-     padding: 1rem;
-     border-bottom-left-radius: 1rem;
- }
+/**Navigation**/
 
- .navigation .nav-brand {
-     font-weight: bold;
- }
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
 
- .navigation .link {
-     color: white;
- }
+.navigation .nav-brand {
+    font-weight: bold;
+}
 
- .nav-pills {
-     text-align: right;
- }
+.navigation .link {
+    color: white;
+}
 
- /**Header**/
+.nav-pills {
+    text-align: right;
+}
 
-  .hero {
-      padding: 2rem;
-    
-  }
+/**Header**/
 
-  .hero .hero-img {
-       max-width: 350px;
-       display: block;
-       margin: auto;
-  }
+.hero {
+    padding: 2rem;
 
-  .hero .hero-heading {
-      padding-top: 1rem;
-     color: var(--dary-grey);
-  }
+}
 
-  .hero .hero-heading .heading-inverted {
-      color: var(--primary-color);
-  }
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading {
+    padding-top: 1rem;
+    color: var(--dary-grey);
+}
+
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
+}
+
+/**Section**/
+
+.section {
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+}
+
+.ow {
+   background-color: var(--off-white);
+}
