--- a/styles.css
+++ b/styles.css
@@ -32,19 +32,30 @@ hr {
 .link {
     text-decoration: none;
     padding: 0.5rem 1rem;
+    
 }
 
 .primary-link {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: white;
+   
 }
 
 .secondary-link {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+    
+
 }
+
+.link-margin {
+    margin-right: 20px;
+    
+}
+
+
 
 /***List***/
 
@@ -82,6 +93,7 @@ hr {
 
 .hero {
     padding: 2rem;
+    padding-bottom: 10px;
 
 }
 
@@ -115,6 +127,10 @@ hr {
    background-color: var(--off-white);
 }
 
+.project-info {
+    margin-bottom: 20px;
+}
+
 /**Footers**/
 
 footer {
@@ -122,6 +138,7 @@ footer {
     padding: 2rem 1rem;
     color: white;
     text-align: center;
+    border-top-right-radius: 1rem;
 }
 
 footer .link{
@@ -130,4 +147,13 @@ footer .link{
 
 footer ul {
     padding-inline-start: 0px;
+}
+
+.footer-heading {
+    font-weight: bold;
+    font-size: large;
+}
+
+.showcase{
+    padding: 2rem;
 }
