--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 body {
     font-family: 'Source Sans Pro', sans-serif;
     margin: 5px;
+    width: 100%;
 }
 
 hr {
@@ -79,6 +80,7 @@ hr {
 
 .navigation .nav-brand {
     font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .navigation .link {
@@ -114,7 +116,7 @@ hr {
 }
 
 #blog-img{
-    max-width: 275px;
+    max-width: 235px;
 }
 
 /**Section**/
