--- a/styles.css
+++ b/styles.css
@@ -1,168 +1,178 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
 
 :root {
-    --primary-color: #3d57c7;
-    --dary-grey: #716F81;
-    --off-white: #F9F9F9;
-
+  --primary-color: #3d57c7;
+  --dary-grey: #716f81;
+  --off-white: #f9f9f9;
 }
 
 body {
-    font-family: 'Source Sans Pro', sans-serif;
-    margin: 5px;
-    width: 100%;
+  font-family: "Source Sans Pro", sans-serif;
+  margin: 0px;
+  width: 100%;
 }
 
 hr {
-    margin: 1rem 0rem;
+  margin: 1rem 0rem;
 }
 
 /**Container**/
 .container {
-    padding: 0rem 1rem;
+  padding: 0rem 1rem;
 }
 
 .container-center {
-    max-width: 600px;
-    margin: auto;
+  max-width: 600px;
+  margin: auto;
 }
 
 /**Links**/
 
 .link {
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    
+  text-decoration: none;
+  padding: 0.5rem 1rem;
 }
 
 .primary-link {
-    background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color: white;
-   
+  background-color: var(--primary-color);
+  border-radius: 0.5rem;
+  color: white;
 }
 
 .secondary-link {
-    color: var(--primary-color);
-    border-radius: 0.5rem;
-    border: 1px solid var(--primary-color);
-    
-
+  color: var(--primary-color);
+  border-radius: 0.5rem;
+  border: 1px solid var(--primary-color);
 }
 
 .link-margin {
-    margin-right: 20px;
-    
+  margin-right: 20px;
 }
-
-
 
 /***List***/
 
 .list-non-bullet {
-    list-style: none;
+  list-style: none;
+  text-align: center;
 }
 
 .list-item-inline {
-    display: inline;
-    padding: 0rem 0.5rem;
+  display: inline;
+  margin-block: 2px;
+  padding: 0.5rem 0.5rem;
+  text-decoration: none;
+  position: relative;
+}
+
+.list-item-inline::after {
+  content: " ";
+  width: 100%;
+  height: 1px;
+  background-color: #fff;
+  border-radius: 4px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.25 ease;
+}
+
+.list-item-inline:hover::after {
+  transform: scaleX(1);
 }
 
 /**Navigation**/
 
 .navigation {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 1rem;
-    border-bottom-left-radius: 1rem;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem;
+  border-bottom-left-radius: 1rem;
 }
 
 .navigation .nav-brand {
-    font-weight: bold;
-    font-size: 1.5rem;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .navigation .link {
-    color: white;
+  color: white;
 }
 
 .nav-pills {
-    text-align: right;
+  text-align: right;
 }
 
 /**Header**/
 
 .hero {
-    padding: 2rem;
-    padding-bottom: 10px;
-
+  padding: 2rem;
+  padding-bottom: 10px;
 }
 
 .hero .hero-img {
-    max-width: 350px;
-    display: block;
-    margin: auto;
+  max-width: 350px;
+  display: block;
+  margin: auto;
 }
 
 .hero .hero-heading {
-    text-align: center;
-    padding-top: 1rem;
-    color: var(--dary-grey);
+  text-align: center;
+  padding-top: 1rem;
+  color: var(--dary-grey);
 }
 
 .hero .hero-heading .heading-inverted {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
-#blog-img{
-    max-width: 235px;
+#blog-img {
+  max-width: 235px;
 }
 
 /**Section**/
 
 .section {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .section h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .ow {
-   background-color: var(--off-white);
+  background-color: var(--off-white);
 }
 
 .project-info {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
-
 
 /**Footers**/
 
 footer {
-    background-color: var(--primary-color);
-    padding: 2rem 1rem;
-    color: white;
-    text-align: center;
-    border-top-right-radius: 1rem;
-    margin-top: 20px;
+  background-color: var(--primary-color);
+  padding: 2rem 1rem;
+  color: white;
+  text-align: center;
+  border-top-right-radius: 1rem;
+  margin-top: 20px;
 }
 
-footer .link{
-     color: white;
+footer .link {
+  color: white;
 }
 
 footer ul {
-    padding-inline-start: 0px;
+  padding-inline-start: 0px;
 }
 
 .footer-heading {
-    font-weight: bold;
-    font-size: large;
+  font-weight: bold;
+  font-size: large;
 }
 
-.showcase{
-    padding: 2rem;
+.showcase {
+  padding: 2rem;
 }
