--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
 
 :root {
   --primary-color: #3d57c7;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   margin: 0px;
   width: 100%;
 }
@@ -24,6 +24,12 @@ hr {
 .container-center {
   max-width: 600px;
   margin: auto;
+}
+
+.container .icons {
+  margin-left: 7rem;
+  display: flex;
+  gap: 3rem;
 }
 
 /**Links**/
@@ -65,7 +71,7 @@ hr {
 }
 
 .list-item-inline::after {
-  content: " ";
+  content: ' ';
   width: 100%;
   height: 1px;
   background-color: #fff;
